Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11542

Race between imp_state and imp_invalid

XMLWordPrintable

    • 3
    • 9223372036854775807

      In import operation, We set import to LUSTRE_IMP_DISCON and then set imp_invalid for unplayable import in some case. Someone may set this import up between those two operation. So we will have a FULL state import with invalid be setted.

            ys Yang Sheng
            ys Yang Sheng
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: