lustre/ptlrpc/client.c
@@ -3127,11 +3127,12 @@ void ptlrpc_abort_inflight(struct obd_import *imp)
 	struct list_head *tmp, *n;
 	ENTRY;
 
-	/* Make sure that no new requests get processed for this import.
+	/*
+	 * Make sure that no new requests get processed for this import.
 	 * ptlrpc_{queue,set}_wait must (and does) hold imp_lock while testing
 	 * this flag and then putting requests on sending_list or delayed_list.
 	 */
-	spin_lock(&imp->imp_lock);
+	assert_spin_locked(&imp->imp_lock);
 
 	/* XXX locking?  Maybe we should remove each request with the list
 	 * locked?  Also, how do we know if the requests on the list are
@@ -3172,8 +3173,6 @@ void ptlrpc_abort_inflight(struct obd_import *imp)
 	 * will still leak reqs that haven't committed.  */
 	if (imp->imp_replayable)
 		ptlrpc_free_committed(imp);
-
-	spin_unlock(&imp->imp_lock);
 
 	EXIT;
 }
